--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         PLUGIN_VERSION: ${PLUGIN_VERSION}
     container_name: sonarqube
     ports:
-      - "9000:9000"
+      - "8090:9000"
     networks:
       - sonarnet
     environment:
@@ -30,7 +30,7 @@ services:
       timeout: 5s
       retries: 5
     hostname: db
-    container_name: postgres
+    container_name: postgres_sonarqube
     networks:
       - sonarnet
     environment:
